# kotonya

./: .env.example  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: FUNDING.yml
src/: main.rs
src/commands/: character.rs  free_company.rs  mod.rs  ping.rs  search.rs
