[package]
name = "kotonya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
xivapi = { git = "https://github.com/j1nxie/xivapi-rs", branch = "features/port-rust-2021" }
serenity = { version = "0.11.6", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
