[package]
name = "kotonya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
poise = { git = "https://github.com/serenity-rs/poise" }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
xivapi = { git = "https://github.com/j1nxie/xivapi-rs", branch = "features/port-rust-2021" }
